<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFEB3B"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_regist"
            android:textColor="#111"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="20sp"
            android:background="#FFF"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:textColor="#111"
            android:textSize="16sp"
            android:textColorHint="#555"/>

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="20sp"
            android:background="#FFF"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:textColor="#111"
            android:textSize="16sp"
            android:textColorHint="#555"/>

        <EditText
            android:id="@+id/pass_register"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="20sp"
            android:background="#FFF"
            android:hint="@string/pass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:textColor="#111"
            android:textSize="16sp"
            android:textColorHint="#555"/>

        <EditText
            android:id="@+id/confirmPass_register"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="20sp"
            android:background="#FFF"
            android:hint="@string/confirm_pass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:textColor="#111"
            android:textSize="16sp"
            android:textColorHint="#555"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme"
            android:layout_marginTop="50sp"
            android:textColor="#111"
            android:background="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:text="@string/regist"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>