<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="image of logo"
            app:srcCompat="@mipmap/ic_logo_foreground"/>
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emoveon"
            android:textColor="#111"
            android:textSize="20sp"
            android:text="@string/emoveon"
            android:layout_marginBottom="10sp"
            android:textStyle="bold"/>


        <LinearLayout
            android:id="@+id/dashboardLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@mipmap/bg_init"
            android:orientation="vertical"
            android:gravity="center"
            android:scaleType="centerCrop">

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcome"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:text="@string/welcome"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeName"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="30sp"/>
            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeLabel"
                android:textColor="#111"
                android:textSize="20sp"
                android:text="@string/whatDo"
                android:textStyle="bold"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="20sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:background="@mipmap/ic_package_foreground"
                    android:id="@+id/newPack"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:text="@string/newPack"
                    android:textSize="10sp"
                    android:gravity="bottom|center"
                    android:paddingBottom="10sp"
                    android:textColor="#111"
                    android:shadowColor="@color/colorPrimaryDark"/>

                <Button
                    android:background="@mipmap/ic_checklist_foreground"
                    android:id="@+id/listPacks"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:text="@string/listPack"
                    android:textSize="10sp"
                    android:gravity="bottom|center"
                    android:paddingBottom="10sp"
                    android:textColor="#111"
                    android:outlineAmbientShadowColor="@color/colorPrimaryDark"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/myData"
                    android:background="@mipmap/ic_info_foreground"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:text="@string/myData"
                    android:textSize="10sp"
                    android:gravity="bottom|center"
                    android:paddingBottom="10sp"
                    android:textColor="#111"
                    android:shadowColor="@color/colorPrimaryDark"/>

                <Button
                    android:background="@mipmap/ic_logout_foreground"
                    android:id="@+id/logOut"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:text="@string/logOut"
                    android:textSize="10sp"
                    android:gravity="bottom|center"
                    android:paddingBottom="10sp"
                    android:textColor="#111"
                    android:shadowColor="@color/colorPrimaryDark"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>